<resources>
    <string name="app_name">Incidencias</string>

    <!--Login String-->
    <string name="text_view_title_login">Login</string>
    <string name="edit_text_email_login">Ingresa tu correo eléctronico</string>
    <string name="edit_text_password_login">Ingresa tu contreseña</string>
    <string name="button_login_start">Iniciar Sesión</string>

    <!--Home String -->
    <string name="title_activity_home">Home</string>
    <string name="text_view_title_home">Lista de Incidencias</string>
    <string name="edit_text_searh_text_incidencias">Buscar Incidencia...</string>

    <!--Add incidencias-->
    <string name="title_activity_add_incidencias">Registro de Incidencias</string>
    <string name="text_view_spinner_incidencia">Tipos de Incidencias</string>
    <string name="edit_text_descripcion_incidencia">Ingresa la descripción de la incidencia</string>
    <string name="action_settings">Settings</string>

    <!-- Retroalimentaciones String -->
    <string name="text_view_title_retroalimentacion">Lista de retroalimentaciones</string>
    <string name="edit_text_search_text_retroalimentacion">Buscar Retroalimentacion...</string>


    <!-- Users String -->
    <string name="text_view_title_users">Lista de usuarios</string>
    <string name="edit_text_search_text_users">Buscar Usuarios...</string>

    <!-- Add Retroalimentacion -->
    <string name="text_view_title_add_retroalimentacion">Retroalimentación de Incidencia</string>
    <string name="edit_text_retroalimentacion">Ingresa la retroaliementación de la incidencia</string>
    <string name="text_view_estado_retroalimentacion">Estado de Incidencia</string>
    <string name="radio_button_revision">En revisión</string>
    <string name="radio_button_correccion">Acción Correctiva</string>
    <string name="radio_button_preventivo">Acción Preventiva</string>
    <string name="radio_button_sin_solucion">Sin solución</string>

    <!-- Add User -->
    <string name="text_view_spinner_empleados">Lista de empleados</string>
    <string name="text_view_radio_group_rol">Roles</string>
    <string name="edit_text_name">Ingresa el nombre de usuario</string>
    <string name="edit_text_email">Ingresa el correo electronico</string>
    <string name="edit_text_password">Ingresa la contraseña</string>
    <string name="radio_button_admin">Administrador</string>
    <string name="radio_button_empleado">Empleado</string>

    <!--Profile-->
    <string name="text_view_profile_name">Username</string>
    <string name="text_view_profile_email">Email</string>
    <string name="text_view_profile_empleado">Nombre Completo</string>
    <string name="text_view_profile_cargo">Cargo</string>
    <string name="text_view_profile_departamento">Departamento</string>

    <!--Reportes-->
    <string name="edit_text_form">Desde</string>
    <string name="edit_text_to">Hasta</string>
    <string name="button_pdf">Generar reporte</string>

    <!--Buttons-->
    <string name="button_guardar">Guardar Registro</string>
    <string name="button_send_notificacion">Notificar a Administrador</string>
    <string name="button_send_notificacion_user">Notificar a Empleado</string>
    <string name="button_detalles">Mostrar Detalles</string>
    <string name="button_actualizar">Actualizar Registro</string>
    <string name="button_borrar">Borrar Registro</string>
    <string name="button_remover">Remover retroalimentación</string>
    <string name="button_retroalimenar">Revisar Incidencia</string>

    <!---Menu Item-->
    <string name="menu_home">Home</string>
    <string name="menu_retroalimentaciones">Retroalimentaciones</string>
    <string name="menu_users">Usuarios</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_exit">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Mod Incidencias -->
    <string name="title_activity_mod_incidencias">Detalles Incidencias</string>
</resources>