<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_retroalimentacion"
            android:icon="@drawable/ic_nav_retroalimentacion"
            android:title="@string/menu_retroalimentaciones" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_nav_users"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_nav_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>