<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jherrera.incidencias.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_retroalimentacion"
        android:name="com.jherrera.incidencias.ui.retroalimentaciones.RetroalimentacionesFragment"
        android:label="@string/menu_retroalimentaciones"
        tools:layout="@layout/fragment_retroalimentaciones" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.jherrera.incidencias.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.jherrera.incidencias.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>