<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ModRetroalimentacionActivity">

    <TextView
        android:id="@+id/textViewModRetroalimentacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/text_view_title_add_retroalimentacion"
        android:textColor="@color/deep_orange_800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextModRetroalimentacion"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_desing_custom"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/edit_text_retroalimentacion"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewModRetroalimentacion" />

    <TextView
        android:id="@+id/textViewModEstadoIncidencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/text_view_estado_retroalimentacion"
        android:textColor="@color/deep_orange_800"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModRetroalimentacion" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewModEstadoIncidencia">

        <RadioButton
            android:id="@+id/radioButtonRevision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/radio_button_revision"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonCorrecion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/radio_button_correccion"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonPreventivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/radio_button_preventivo"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonSinSolucion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/radio_button_sin_solucion"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonModRetroalimentacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_desing_custom"
        android:fontFamily="@font/aldrich"
        android:text="@string/button_actualizar"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonBorrarRetroalimentacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_desing_custom"
        android:fontFamily="@font/aldrich"
        android:text="@string/button_borrar"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonModRetroalimentacion" />
</androidx.constraintlayout.widget.ConstraintLayout>