<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ModUsuarioActivity">

    <TextView
        android:id="@+id/textViewLabelSpinnerEmpleado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/text_view_spinner_empleados"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerEmpleados"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_desing_custom"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelSpinnerEmpleado" />

    <EditText
        android:id="@+id/editTextModName"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_desing_custom"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/edit_text_name"
        android:inputType="textWebEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEmpleados" />

    <EditText
        android:id="@+id/editTextModEmail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_desing_custom"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/edit_text_email"
        android:inputType="textWebEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModName" />

    <EditText
        android:id="@+id/editTextModPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_desing_custom"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword|textWebPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModEmail" />

    <TextView
        android:id="@+id/textViewLabelUserRol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/text_view_radio_group_rol"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModPassword" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelUserRol">

        <RadioButton
            android:id="@+id/radioButtonAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/radio_button_admin"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/radio_button_empleado"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonModUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_desing_custom"
        android:fontFamily="@font/aldrich"
        android:text="@string/button_actualizar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    <Button
        android:id="@+id/buttonBorrarUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_desing_custom"
        android:fontFamily="@font/aldrich"
        android:text="@string/button_borrar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonModUser" />


</androidx.constraintlayout.widget.ConstraintLayout>