<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ReportsActivity">

    <TextView
        android:id="@+id/textViewLabelSpinnerEmpleadoReporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/text_view_spinner_empleados"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerEmpleadosReporte"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_desing_custom"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelSpinnerEmpleadoReporte" />

    <EditText
        android:id="@+id/editTextDateFrom"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_desing_custom"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/edit_text_form"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEmpleadosReporte" />

    <EditText
        android:id="@+id/editTextDateTo"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_desing_custom"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/edit_text_to"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateFrom" />


    <Button
        android:id="@+id/buttonPDFReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_desing_custom"
        android:fontFamily="@font/aldrich"
        android:text="@string/button_pdf"
        android:textSize="18sp"
        app:icon="@drawable/ic_pdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateTo" />

</androidx.constraintlayout.widget.ConstraintLayout>