<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddIncidenciasActivity"
    tools:showIn="@layout/activity_mod_incidencias">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textViewModLabelSpinnerTipoIncidencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/text_view_spinner_incidencia"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerModTipoIncidencias"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_desing_custom"
            android:paddingTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewModLabelSpinnerTipoIncidencia" />

        <EditText
            android:id="@+id/editTextModDescripcionInciencia"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_desing_custom"
            android:ems="10"
            android:fontFamily="@font/aldrich"
            android:hint="@string/edit_text_descripcion_incidencia"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerModTipoIncidencias" />

        <Button
            android:id="@+id/buttonActualizarIncidencias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_desing_custom"
            android:fontFamily="@font/aldrich"
            android:text="@string/button_actualizar"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextModDescripcionInciencia" />

        <Button
            android:id="@+id/buttonBorrarIncidencias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_desing_custom"
            android:fontFamily="@font/aldrich"
            android:text="@string/button_borrar"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonActualizarIncidencias" />

        <Button
            android:id="@+id/buttonPDFReportIncidencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_desing_custom"
            android:fontFamily="@font/aldrich"
            android:text="@string/button_pdf"
            android:textSize="18sp"
            app:icon="@drawable/ic_pdf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonBorrarIncidencias" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>